# CareerSignal

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_careersignal_daily.bat
.github/workflows/: tests.yml
config/: ats_coverage_audit.csv  company_ats_audit.csv  company_config.csv  company_config_generated.csv  company_config_verified_workday.csv  match_rules.json  workday_api_url_test_results.csv
docs/: CareerSignal_Project_State.md  filtering_strategy.md
reports/: careersignal_dashboard.pbix
scripts/: add_match_scoring_columns.py  check_generated_workday_api_urls.py  collect_greenhouse_jobs.py  export_ready_companies_to_config.py  export_to_excel.py  generate_company_config_from_audit.py  init_database.py  preview_workday_jobs.py  preview_workday_normalized_jobs.py  test_config_loader.py  test_database.py  test_email_report.py  test_job_normalizer.py  test_match_scoring.py  test_new_job_detection.py  update_match_scores.py  verify_ats_audit.py  view_database.py
src/careersignal/: config_loader.py  database.py  email_report.py  job_normalizer.py  logging_config.py  main.py  match_scoring.py
src/careersignal/collectors/: workday.py
tests/: test_email_report.py  test_match_scoring.py
