[project]
name = "careersignal"
version = "0.1.0"
description = "CareerSignal job alert and ATS data collection project"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"